task 2 is coding

--- a/listing.html
+++ b/listing.html
@@ -1,10 +1,204 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="listing.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Listing-Astrio</title>
 </head>
+
+
 <body>
-$END$
+<div class="grid center__grid">
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            Coalesce: Functioning
+            On Impatience T-Shirt
+        </h2>
+            <div class="row">
+                <p class="card__price">$<span class="card__special-text">15</span>.00</p>
+                <button class="button card__button">
+                    Add to Cart
+                </button>
+            </div>
+                <div class="test">
+                    <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
+                </div>
+            <p class="card__text">
+                When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+                Looking for some color to brighten up your day? Check out the cotton sundresses.
+            </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            Ink Eater: Krylon
+            Bombear Destroyed
+            Tee
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">22</span>.00</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            The Only Children:
+            Paisley T-Shirt
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">55</span>.00</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            Coalesce: Functioning
+            On Impatience T-Shirt
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">15</span>.00</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            Zolof The Rock And
+            Roll Destroyer: LOL
+            Cat T-shirt
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">13</span>.50</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            The Get Up Kids:
+            Band Camp Pullover
+            Hoodie
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">12</span>.30</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            Kenneth Cole New
+            York Men's Con-verge
+            Slip-on
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">169</span>.99</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            ASICS® Men's GEL-
+            Kayano® XII
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">134</span>.99</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+    <div class="card">
+        <img class="card__image" src="./images/photo.jpg" alt="Футболка">
+        <h2 class="card__title">
+            CN Clogs Beach/
+            Garden Clog
+        </h2>
+        <div class="row">
+            <p class="card__price">$<span class="card__special-text">15</span>.99</p>
+            <button class="button card__button">
+                Add to Cart
+            </button>
+        </div>
+        <div class="test">
+            <hr><span class="card__stars">&#9733;</span><hr>
+        </div>
+        <p class="card__text">
+            When you're dress-hunting, you want to find something that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go!
+            Looking for some color to brighten up your day? Check out the cotton sundresses.
+        </p>
+    </div>
+</div>
+
+
 </body>
 </html>
