--- a/listing.html
+++ b/listing.html
@@ -25,7 +25,7 @@
                     Add to Cart
                 </button>
             </div>
-                <div class="test">
+                <div class="row-stars">
                     <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
                 </div>
             <p class="card__text">
@@ -46,7 +46,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -66,7 +66,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -86,7 +86,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -107,7 +107,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -128,7 +128,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -149,7 +149,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;&#9733;&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -169,7 +169,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span><hr>
         </div>
         <p class="card__text">
@@ -189,7 +189,7 @@
                 Add to Cart
             </button>
         </div>
-        <div class="test">
+        <div class="row-stars">
             <hr><span class="card__stars">&#9733;</span><hr>
         </div>
         <p class="card__text">
